--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.4",
+    "react-router-dom": "^7.2.0",
     "recharts": "^2.13.0",
+    "swiper": "^11.2.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
